Update Blog “2023-02-18-new-blog”

--- a/_posts/2023-02-18-new-blog.md
+++ b/_posts/2023-02-18-new-blog.md
@@ -1,6 +1,6 @@
 ---
 layout: blog
-title: New Blog
+title: How to create Next js blog using Netlify CMS
 description: "test "
 date: Feb 18th 23
 modified_date: Feb 18th 23
