view blog issue fixed

--- a/_posts/2023-02-18-new-blog.md
+++ b/_posts/2023-02-18-new-blog.md
@@ -2,8 +2,8 @@
 layout: blog
 title: How to create Next js blog using Netlify CMS
 description: "test "
-date: Feb 18th 23
-modified_date: Feb 18th 23
+date: 2023 02 20 09:04:48
+modified_date: 2023 02 20 09:04:48
 content: t﻿est post description says I need a list for you guys and you have to
   be in a good place and you know you are the one ☝️ the most and the first one
   ☝️ the other two are the ones
